# spotify-api-app

./: README.md  create_file.py  main.py  pyproject.toml  spotify_api.py  token.txt
GUI/: SpotifyAPIGuiV2.py  SpotifyAPIGuiV2_support.py
