[tool.poetry]
name = "spotifyapiapplicationv2"
version = "1.0.0"
description = ""
authors = ["Candid <candidopris@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
plotly = "^5.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
